Fixed uneven skill cards bug :)

--- a/main.scss
+++ b/main.scss
@@ -60,19 +60,20 @@
   }
 
   &__p{
-    margin-bottom: 60px;
+    margin-bottom: 40px;
   }
 
-  .skill-icons {
+  .skill-cards {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     gap: 10px;
 
     .skill-card {
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: flex-end;
     }
   }
 }
